--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=notification
+spring.application.name=notifications
 server.port=9002
 eureka.client.service-url.defaultZone=http://localhost:9000/eureka/
