--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.5</version>
+    <version>2.7.4</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>be.vinci.ipl</groupId>
-  <artifactId>notification</artifactId>
+  <artifactId>notifications</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>notification</name>
-  <description>notification</description>
+  <name>notifications</name>
+  <description>notifications</description>
   <properties>
     <java.version>17</java.version>
-    <spring-cloud.version>2021.0.5</spring-cloud.version>
+    <spring-cloud.version>2021.0.4</spring-cloud.version>
   </properties>
   <dependencies>
     <dependency>
@@ -30,10 +29,6 @@
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
