--- a/calculator/src/main/resources/application.properties
+++ b/calculator/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=passenger
-server.port=9004
+spring.application.name=calculator
+server.port=9090
 eureka.client.service-url.defaultZone=http://localhost:9000/eureka/
