--- a/passenger/pom.xml
+++ b/passenger/pom.xml
@@ -29,11 +29,13 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
+      <version>3.1.4</version>
+    </dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
-		</dependency>
+      <version>3.1.5</version>
+    </dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
