--- a/trip/Trip.yaml
+++ b/trip/Trip.yaml
@@ -24,10 +24,6 @@ paths:
       responses:
         400:
           description: Trip in request is not correct
-        401:
-          description: Missing authentification
-        403:
-          description: Not identified as the corresponding user
         201:
           description: Trip is created, sent trip created with its assigned ID
           content:
@@ -118,10 +114,6 @@ paths:
         - authentication:
             - driver
       responses:
-        401:
-          description: Missing authentification
-        403:
-          description: Not identified as the corresponding user
         404:
           description: No trip found with this ID
         201:
@@ -194,7 +186,7 @@ components:
         destination:
           latitude: 50.849372
           longitude: 4.451009
-        departure: 2022-10-24
+        departure_date: 2022-10-24
         driver_id: 12
         available_seating: 2
 
@@ -207,7 +199,7 @@ components:
           $ref: '#/components/schemas/position'
         destination:
           $ref: '#/components/schemas/position'
-        departure:
+        departure_date:
           type: string
           description: Date in ISO 8601, YYYY-MM-DD
         driver_id:
@@ -222,98 +214,6 @@ components:
         destination:
           latitude: 50.849372
           longitude: 4.451009
-        departure: 2022-10-24 10:45:00
+        departure_date: 2022-10-24 10:45:00
         driver_id: 12
         available_seating: 2
-
-    passengers:
-      type: object
-      properties:
-        pending:
-          type: array
-          items:
-            $ref: '#/components/schemas/user'
-        accepted:
-          type: array
-          items:
-            $ref: '#/components/schemas/user'
-        refused:
-          type: array
-          items:
-            $ref: '#/components/schemas/user'
-
-    passenger_trips:
-      type: object
-      properties:
-        pending:
-          type: array
-          items:
-            $ref: '#/components/schemas/trip'
-        accepted:
-          type: array
-          items:
-            $ref: '#/components/schemas/trip'
-        refused:
-          type: array
-          items:
-            $ref: '#/components/schemas/trip'
-
-    newUser:
-      type: object
-      properties:
-        email:
-          type: string
-        firstname:
-          type: string
-        lastname:
-          type: string
-        password:
-          type: string
-      example:
-        email: gregory.seront@vinci.be
-        firstname: Gregory
-        lastname: Seront
-        password: password123
-
-    user:
-      type: object
-      properties:
-        id:
-          type: integer
-        email:
-          type: string
-        firstname:
-          type: string
-        lastname:
-          type: string
-      example:
-        id: 1
-        email: gregory.seront@vinci.be
-        firstname: Gregory
-        lastname: Seront
-
-    credentials:
-      type: object
-      properties:
-        email:
-          type: string
-        password:
-          type: string
-      example:
-        email: gregory.seront@vinci.be
-        password: password123
-
-    notification:
-      type: object
-      properties:
-        trip_id:
-          type: integer
-        date:
-          type: string
-          description: Date in ISO 8601, YYYY-MM-DD
-        notification_text:
-          type: string
-      example:
-        trip_id: 45
-        date: 2022-10-24
-        notification_text: Votre demande de voyage a été acceptée
