--- a/authentication/Authentication.yaml
+++ b/authentication/Authentication.yaml
@@ -10,6 +10,7 @@ paths:
   /auth/{email}:
     parameters:
       - name: email
+        required: true
         in: path
         description: Email of the user
         schema:
