--- a/users/User.yaml
+++ b/users/User.yaml
@@ -27,25 +27,7 @@ paths:
             'application/json':
               schema:
                 $ref: '#/components/schemas/user'
-    get:
-      summary: Find user from its email
-      parameters:
-        - name: email
-          in: query
-          required: true
-          schema:
-            type: string
-            example: gregory.seront@vinci.be
-          description: Email of the user
-      responses:
-        404:
-          description: No user found with this email
-        200:
-          description: Sent user information
-          content:
-            'application/json':
-              schema:
-                $ref: '#/components/schemas/user'
+
   /users/{id}:
     parameters:
       - name: id
@@ -97,6 +79,27 @@ paths:
           description: No user found with this ID
         200:
           description: User is deleted
+
+  /users/{email}:
+    get:
+      summary: Find user from its email
+      parameters:
+        - name: email
+          in: query
+          required: true
+          schema:
+            type: string
+            example: gregory.seront@vinci.be
+          description: Email of the user
+      responses:
+        404:
+          description: No user found with this email
+        200:
+          description: Sent user information
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/user'
 components:
   schemas:
     user:
