--- a/eurekaServer/pom.xml
+++ b/eurekaServer/pom.xml
@@ -21,12 +21,14 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-		</dependency>
+      <version>3.1.4</version>
+    </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+      <version>3.0.0</version>
+      <scope>test</scope>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
